# hexlet-python-exam

./: Makefile  Readme.md  pyproject.toml
db/: erd.pgerd  fill_db.sql  init_db.sql  materials.xlsx  materials_suppliers.xlsx  suppliers.xlsx
src/: MainWindow.py  Materials.py  __main__.py  settings.py
src/controls/: MainWindow.py  MaterialsDialog.py  MaterialsItemDelegate.py  MaterialsListView.py  MaterialsWidget.py  PageLink.py  Pages.py
src/model/: Material.py  MaterialsFilteredModel.py  MaterialsModel.py  MaterialsPagedModel.py  SortType.py
tests/: test_wslib.py
ws/: WSUniversalLib.py
